Set Up Data Context
Add PostgreSQL DataContext

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,8 +1,15 @@
 {
+  "ConnectionStrings": {
+    "PostGreSQLConnectionString": "User ID=postgres;Password=rootp@$$word;Server=localhost;Port=5433;Database=HIPALERT;Pooling=true;"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DataBase": {
+    "DataBaseType": "PostgreSQL"
   }
 }
