--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,15 +1,34 @@
 {
   "ConnectionStrings": {
-    "PostGreSQLConnectionString": "User ID=postgres;Password=rootp@$$word;Server=localhost;Port=5433;Database=HIPALERT;Pooling=true;"
+    "DefaultConnection": "User ID=postgres;Password=rootp@$$word;Server=localhost;Port=5433;Database=HIPALERT;Pooling=true;"
   },
-  
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "DataBase": {
-    "DataBaseType": "PostgreSQL"
-  }
+  "Token": {
+    "TokenSecret": "yweyajyegrqw73472y843i193b zcsbnnaschiui3y7i4732142ui4hhjs",
+    "TokenIssuer": "kkkkkk",
+    "TokenAudience": "ggggg",
+    "Duration": 30
+  },
+  "SendGrid": {
+    "ApiKey": "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",
+    "SenderEmail": "josemachanguele@gmail.com",
+    "SenderName": "SIGIP"
+  },
+  "Database": {
+    "DatabaseType": "PostGreSQL"
+  },
+  "LogoutWorker": 5000,
+  "AutoAllocateTecWorker": 5000,
+  "AllowedHosts": "*",
+  "DefaultPassword": "Pa$$w0rd",
+  "LoggingDirectory": "../_logs/ProgramLog",
+  "ApiUrl": "https://localhost:5001/api/"
 }
