--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=rootp@$$word;Server=localhost;Port=5433;Database=HIPALERT;Pooling=true;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
