Setup Authentication and Authorization
Set up authentication mechanisms to secure the API

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,8 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "User ID=postgres;Password=rootp@$$word;Server=localhost;Port=5433;Database=HIPALERT;Pooling=true;"
   },
-
-
+  
+  "Database": {
+    "DatabaseType": "PostGreSQL"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,24 +14,23 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Token": {
-    "TokenSecret": "yweyajyegrqw73472y843i193b zcsbnnaschiui3y7i4732142ui4hhjs",
-    "TokenIssuer": "kkkkkk",
-    "TokenAudience": "ggggg",
-    "Duration": 30
+  
+  "Token":{
+    "Duration": 10,
+    "TokenSecret": "sgdgv#FgknjDd45643sndbjKFOP2$Mfj2ND35sdgfgd*54%$*(*^OIJEsgfgasgf df"
   },
+  
   "SendGrid": {
     "ApiKey": "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",
     "SenderEmail": "josemachanguele@gmail.com",
     "SenderName": "SIGIP"
   },
-  "Database": {
-    "DatabaseType": "PostGreSQL"
-  },
+  
   "LogoutWorker": 5000,
   "AutoAllocateTecWorker": 5000,
   "AllowedHosts": "*",
-  "DefaultPassword": "Pa$$w0rd",
-  "LoggingDirectory": "../_logs/ProgramLog",
-  "ApiUrl": "https://localhost:5001/api/"
+  "DefaultPassword": "l&7theP@$5w0rd",
+  "ApiUrl": "https://localhost:5277/",
+  "FileUrl": "https://localhost:5277/",
+  "LogErrorDirectory": "../_logs/ProgramLog"
 }
