--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -19,11 +19,11 @@
     "Duration": 10,
     "TokenSecret": "sgdgv#FgknjDd45643sndbjKFOP2$Mfj2ND35sdgfgd*54%$*(*^OIJEsgfgasgf df"
   },
-  
+
   "SendGrid": {
     "ApiKey": "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",
-    "SenderEmail": "josemachanguele@gmail.com",
-    "SenderName": "SIGIP"
+    "SenderEmail": "chichavacad@gmail.com",
+    "SenderName": "HIPALERT"
   },
   
   "LogoutWorker": 5000,
