--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -3,14 +3,27 @@
     "DefaultConnection": "User ID=postgres;Password=rootp@$$word;Server=localhost;Port=5433;Database=HIPALERT;Pooling=true;"
   },
 
+  "AllowedHosts": "*",
+
+  "DataBase": {
+    "DataBaseType": "PostgreSQL"
+  },
+
+  "Token": {
+    "Duration": 10,
+    "TokenSecret": "sgdgv#FgknjDd45643sndbjKFOP2$Mfj2ND35sdgfgd*54%$*(*^OIJEsgfgasgf df"
+  },
+
+  "SendGrid": {
+    "ApiKey": "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",
+    "SenderEmail": "chichavacad@gmail.com",
+    "SenderName": "HIPALERT"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*",
-  "DataBase": {
-    "DataBaseType": "PostgreSQL"
   }
 }
